tests/expected_invalid_parse_missing_field_comma.diag.out
<input>:4:5: error: expected ',' between fields
        second: Int,
        ^^^^^^
